# vue-wasm-starter

./: .gitignore  .lintstagedrc  .stylelintrc.js  Cargo.toml  Dockerfile  LICENSE  README.md  commitlint.config.ts  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.mts
.github/workflows/: lint.yml
crates/greet/: Cargo.toml
crates/greet/src/: lib.rs
locales/: en.yml  zh-CN.yml
src/: App.vue  env.d.ts  main.ts
src/api/modules/: login.ts
src/assets/styles/: index.scss
src/assets/styles/element/: dark.scss  index.scss
src/components/: HelloWorld.vue  LangSwitcher.vue  LoginButton.vue  Menu.vue  ThemeSwitcher.vue  VueUse.vue
src/components/shared/: Footer.vue  Header.vue
src/i18n/: index.ts
src/mocks/: handlers.ts
src/pages/: Detail.vue  Index.vue
src/router/: index.ts
src/store/: user.ts
src/tests/: basic.test.ts  component.test.ts
src/types/: index.d.ts  shims-axios.d.ts
src/utils/: axios.ts  theme.ts  toast.ts  token.ts
