[package]
name = "greet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
  "cdylib",
  "rlib"
]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = "1.0.209"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
# serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.4"

[profile.release]
opt-level = "s"
